# audacity

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake-proxies/: CMakeLists.txt
cmake-proxies/cmake-modules/: Version.cmake
cmake-proxies/lame/: CMakeLists.txt
cmake-proxies/libnyquist/: CMakeLists.txt
cmake-proxies/libsndfile/: CMakeLists.txt
cmake-proxies/portaudio-v19/: CMakeLists.txt
cmake-proxies/wxWidgets/: CMakeLists.txt
help/: CMakeLists.txt
lib-src/libnyquist/: Makefile.am  Makefile.in  RngSupport.cpp  RngSupport.h  nyx.c  random_xoshiro256starstar.h
lib-src/libnyquist/nyquist/cmt/: cext.h  midifns.c  moxc.c  moxc.h  seq.c  seqmread.c  seqmwrite.c  timebase.c  userio.c
lib-src/libnyquist/nyquist/ffts/src/: fftlib.c
lib-src/libnyquist/nyquist/nyqsrc/: convolve.c  falloc.c  seqext.c  sndfnint.c  sndfnintdefs.h  sndfnintptrs.h  sound.c  sound.h
lib-src/libnyquist/nyquist/nyqstk/include/: Generator.h  Noise.h
lib-src/libnyquist/nyquist/nyqstk/src/: Noise.cpp
lib-src/libnyquist/nyquist/sys/win/msvc/: switches.h
lib-src/libnyquist/nyquist/tran/: sampler.c  white.c  whiteg.c  whiteg.h
lib-src/libnyquist/nyquist/xlisp/: security.c  xlisp.c  xlisp.h  xlprin.c
lib-src/libsndfile/src/: aiff.c  common.h
lib-src/libsoxr/src/: data-io.c  fifo.h  pffft.c  soxr.c
lib-src/libvorbis/lib/: vorbisfile.c
lib-src/lv2/lilv/src/: collections.c  lilv_internal.h  util.c
lib-src/lv2/sord/src/: sord.c
lib-src/mod-null/: ModNullCallback.cpp
lib-src/mod-nyq-bench/: NyqBench.cpp
lib-src/mod-script-pipe/: ScripterCallback.cpp
lib-src/portaudio-v19/: CMakeLists.txt
lib-src/portaudio-v19/src/hostapi/dsound/: pa_win_ds.c
lib-src/portaudio-v19/src/hostapi/wmme/: pa_win_wmme.c
lib-src/portmixer/src/: px_win_common.c
lib-src/sbsms/src/: buffer.h
locale/: CMakeLists.txt
mac/: configmac.h
mac/Audacity.xcodeproj/: project.pbxproj
mac/scripts/: build_dist.sh
modules/: CMakeLists.txt
modules/mod-null/: CMakeLists.txt
modules/mod-nyq-bench/: CMakeLists.txt
modules/mod-script-pipe/: CMakeLists.txt
nyquist/: CMakeLists.txt  dspprims.lsp
plug-ins/: CMakeLists.txt
src/: AboutDialog.cpp  AudacityApp.cpp  AudacityHeaders.h  AudacityLogger.cpp  Benchmark.cpp  CMakeLists.txt  DirManager.cpp  DirManager.h  Dither.cpp  Dither.h  FFT.cpp  FFmpeg.cpp  FFmpeg.h  FileException.cpp  FileFormats.cpp  FileNames.cpp  Internat.h  InterpolateAudio.cpp  MixerBoard.cpp  ModuleManager.cpp  PluginManager.cpp  Prefs.cpp  Prefs.h  SplashDialog.cpp  Theme.cpp  TimerRecordDialog.cpp  TimerRecordDialog.h  TrackInfo.cpp  WaveClip.cpp  float_cast.h
src/commands/: CommandTargets.cpp
src/effects/: Noise.cpp  Noise.h  Paulstretch.cpp  Paulstretch.h  Phaser.cpp
src/effects/VST/: VSTEffect.cpp
src/effects/audiounits/: AudioUnitEffect.cpp
src/effects/nyquist/: Nyquist.cpp
src/export/: ExportFFmpeg.cpp  ExportFFmpegDialogs.cpp  ExportMP3.cpp  ExportOGG.cpp
src/import/: ImportFFmpeg.cpp  ImportPCM.cpp
src/menus/: TrackMenus.cpp
src/ondemand/: ODManager.cpp
src/prefs/: DevicePrefs.h  DirectoriesPrefs.h  KeyConfigPrefs.h  MidiIOPrefs.h  QualityPrefs.cpp  QualityPrefs.h  RecordingPrefs.h  WaveformSettings.cpp
src/toolbars/: DeviceToolBar.cpp  MeterToolBar.h  MixerToolBar.cpp  SelectionBar.cpp  SpectralSelectionBar.cpp  TimeToolBar.cpp  ToolBar.cpp  ToolBar.h  ToolDock.cpp  ToolManager.cpp
src/tracks/playabletrack/wavetrack/ui/: WaveTrackControls.cpp  WaveformView.cpp
src/tracks/ui/: TrackButtonHandles.cpp
src/widgets/: ASlider.cpp  ASlider.h  NumericTextCtrl.cpp  NumericTextCtrl.h  wxPanelWrapper.h
src/widgets/FileDialog/win/: FileDialogPrivate.cpp
win/: Audacity.exe.manifest  audacity.rc  build_2013.bat  build_2015.bat  build_wx2013.bat  build_wx2015.bat
win/Projects/Audacity/: Audacity.vcxproj  Audacity.vcxproj.filters
win/Projects/libnyquist/: libnyquist.vcxproj  libnyquist.vcxproj.filters
win/Projects/locale/: locale.vcxproj  locale.vcxproj.filters  packages.config
win/Projects/lv2/: lv2.vcxproj
win/wix/: bundle.wxs  wix-arm64.template.in
